Create IndicatorPoint